# Computer-Aided-Drug-Design-workflow-HyperQueue

./: .gitignore  Dockerfile  README.md  awh.py  cadd.py  check.sh  env.py  ligen.py  main.py  pipeline.py  pyproject.toml  requirements.txt  ruff.toml
data/mdp/: em_l0.mdp
gromacs/: pipeline.py  pyproject.toml
gromacs/mdp/: em_l0.mdp  production.mdp
gromacs/src/: ctx.py  gmx.py  io.py  paths.py
gromacs/src/input/: __init__.py  pmx.py
gromacs/src/parts/: prepare_input_files.py  solvate_minimize.py
gromacs/src/steps/: awh.py  common.py  equilibrate.py  solvate_minimize.py
gromacs/src/utils/: io.py  paths.py
ligate/: ctx.py  forcefields.py  gmx.py  mdp.py  pipeline.py  pipeline_ligen.py
ligate/awh/: common.py  input.py  path_provider.py  paths.py  pdb.py  pdb2fasta.py  structureNormalisation.py
ligate/awh/ligen/: common.py  container.py  docking.py  expansion.py  virtual_screening.py
ligate/awh/pipeline/: check_protein.py  common.py  docking.py  expansion.py  hq.py  ligen.py  select_ligands.py  virtual_screening.py
ligate/awh/pipeline/awh/: __init__.py
ligate/awh/pipeline/check_protein/: __init__.py  structure_normalisation.py  tasks.py
ligate/awh/pipeline/create_hybrid_ligands/: __init__.py  tasks.py
ligate/awh/pipeline/docking/: tasks.py
ligate/awh/pipeline/equilibrate/: __init__.py  tasks.py
ligate/awh/pipeline/minimization/: __init__.py  add_ions.py  minimization.py  solvate.py  tasks.py
ligate/awh/pipeline/prepare_production_simulation/: __init__.py  tasks.py
ligate/awh/pipeline/solvate/: __init__.py  tasks.py
ligate/awh/pipeline/virtual_screening/: __init__.py  expansion.py  tasks.py  virtual_screening.py
ligate/awh/pipeline/virtual_screening/ligen/: container.py  expansion.py  virtual_screening.py
ligate/awh/scripts/: __init__.py  create-hybrid-ligands.sh  mergeTopologies.py  posResForLigandToFixStructure.py  prepare-equilibration.sh  prepare-production-simulation.sh
ligate/awh/scripts/mdp/: em_l0.mdp  eq_nvt_l0.mdp  production.mdp
ligate/env/: check.py  install.py
ligate/input/: __init__.py  properties.py
ligate/ligconv/: common.py  gromacs.py  pdb.py  pose.py  pose_extraction.py  topology.py
ligate/ligen/: container.py  expansion.py  virtual_screening.py
ligate/pipelines/: taskmapping.py
ligate/pipelines/awh/: __init__.py  analyze.py  awh.py  common.py  ctx.py  equilibrate.py  pmx_input.py  providers.py  solvate_minimize.py
ligate/pipelines/awh/data/: eq_nvt_l0.mdp  production.mdp
ligate/pipelines/ligconv/: __init__.py  common.py  ctx.py  paths.py  pose.py  protein_topology.py  providers.py  setup.py  structure_fix.py  topology_merge.py
ligate/steps/: analyze.py  awh.py  common.py  equilibrate.py  pmx_input.py  solvate_minimize.py
ligate/utils/: cmd.py  diff.py  error.py  io.py  paths.py  serde.py  text.py  tracing.py
ligate/wrapper/: babel.py  binarywrapper.py  gmx.py  gromacs.py  stage.py
pmx/: versioneer.py
scripts/: install-acpype.sh  install-gromacs.sh  install-openbabel.sh  install-stage.sh  reformat.sh
tests/: README.md  conftest.py  pytest.ini  test_check_protein.py  test_create_hybrid_ligands.py  test_equilibrate.py  test_gromacs.py  test_ligconv.py  test_ligen.py  test_ligen_expansion.py  test_pdb.py  test_pipeline.py  test_steps.py  test_virtual_screening.py
tests/data/awh/1/01-ligen-output/: ligands.mol2  screening.csv
tests/data/awh/1/01-vscreening-output/: ligands-0.mol2  ligands-1.mol2  scores.csv  screening-ligands-0.csv  screening-ligands-1.csv
tests/data/awh/1/02-ligen-to-gromacs-output/: equiNVT_ligand.tpr
tests/data/awh/1/create-hybrid-ligands/input/: conf.gro  posre.itp  topol.top
tests/data/awh/1/input/: crystal.mol2  ligands.smi
tests/data/ligen/p38/fixtures/: pose-dummy-atoms.mol2  pose-dummy-bonds.mol2  pose0-cleaned.mol2  pose0.mol2  pose1-cleaned.mol2  pose1.mol2  pose3.mol2
tests/data/ligen/p38/fixtures/merged/: structure.gro  (+1 more)
tests/data/ligen/p38/protein_amber/: protein.fasta
tests/data/ligen/smi/a/: input.smi  output.smi
tests/data/ligen/smi/b/: input.smi
tests/data/ligen/smi/c/: input.smi  output.smi
tests/ligen/: conftest.py  test_expansion.py
tests/pipelines/: test_ligconv.py
tests/snapshots/: steps__check_protein__0.txt
tests/utils/: bless.py  io.py
(+37 files in other folders)
