[tool.poetry]
name = "ligate"
version = "0.1.0"
description = "AWH Ligen/Gromacs workflow using HyperQueue"
authors = ["Jakub Beránek <jakub.beranek@vsb.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.1"
numpy = "1.23"
click = "^8.1.3"
rdkit = "2023.3.1"
biopython = "^1.81"
tmbed = { git = "https://github.com/BernhoferM/TMbed.git" }
accelerate = "^0.20.3" # For tmbed
openbabel-wheel = "^3.1.1"
rmsd = "1.5.1"
pdb-tools = "2.5.0"
parmEd = { git = "https://github.com/Valdes-Tresanco-MS/ParmEd.git", branch = "v3.4" }
gmx-mmpbsa = "1.5.6"
acpype = "2022.7.21"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-xdist = "2.5.0"
flake8 = "4.0.1"
black = "22.3.0"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
