[tool.poetry]
name = "ligate"
version = "0.1.0"
description = "AWH Ligen/Gromacs workflow using HyperQueue"
authors = ["Jakub Beránek <jakub.beranek@vsb.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
hyperqueue = "^0.17.0"
click = "^8.1.3"
typer = "0.4.1"
Jinja2 = { version = "^3.1.1", optional = true }
numpy = { version = "1.23", optional = true }
rdkit = { version = "2023.3.1", optional = true }
biopython = { version = "^1.81", optional = true }
tmbed = { git = "https://github.com/BernhoferM/TMbed.git", optional = true }
accelerate = { version = "^0.20.3", optional = true } # For tmbed
openbabel-wheel = { version = "^3.1.1", optional = true }
rmsd = { version = "1.5.1", optional = true }
pdb-tools = { version = "2.5.0", optional = true }
parmEd = { git = "https://github.com/Valdes-Tresanco-MS/ParmEd.git", branch = "v3.4", optional = true }
gmx-mmpbsa = { version = "1.5.6", optional = true }
acpype = { version = "2022.7.21", optional = true }
ruff = "^0.2.1"

[tool.poetry.extras]
awh = [
    "Jinja2",
    "numpy",
    "rdkit",
    "biopython",
    "tmbed",
    "accelerate",
    "openbabel-wheel",
    "rmsd",
    "pdb-tools",
    "parmEd",
    "gmx-mmpbsa",
    "acpype"
]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-xdist = "2.5.0"
flake8 = "4.0.1"
black = "22.3.0"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
