[tool.poetry]
name = "gromacs"
version = "0.1.0"
description = "AWH Gromacs workflow using HyperQueue"
authors = ["Jakub Beránek <jakub.beranek@vsb.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
